--- a/public/css/storageManager.css
+++ b/public/css/storageManager.css
@@ -1,216 +1,224 @@
 .content {
-  display: flex;
+        display: flex;
 
-  flex-direction: row;
+        flex-direction: row;
 
-  width: 100%;
+        width: 100%;
 
-  align-content: center;
+        align-content: center;
 
-  overflow: hidden;
+        overflow: hidden;
 
-  height: 92vh;
+        height: 92vh;
 
-  margin: 0;
+        margin: 0;
 
-  border-width: 0;
+        border-width: 0;
 }
 
 body {
-  margin: 0;
+        margin: 0;
 }
 
 .button {
-  font-size: 18px;
+        font-size: 18px;
 }
 
 .file {
-  width: 280px;
+        width: 280px;
 
-  height: 280px;
+        height: 280px;
 
-  flex-shrink: 0;
+        flex-shrink: 0;
 
-  display: flex;
+        display: flex;
 
-  flex-direction: column;
+        flex-direction: column;
 
-  text-align: center;
+        text-align: center;
 
-  padding: 0;
+        padding: 0;
 
-  border-width: 1px;
+        border-width: 1px;
 
-  background-color: transparent;
+        background-color: transparent;
 
-  border-color: transparent;
+        border-color: transparent;
 
-  white-space: nowrap;
+        white-space: nowrap;
 
-  overflow: hidden;
+        overflow: hidden;
 
-  text-overflow: ellipsis;
+        text-overflow: ellipsis;
+}
+
+.selected {
+        border-style: solid !important;
+        border-color: lightblue !important;
+        border-width: 4px;
 }
 
 * {
-  box-sizing: border-box;
+        box-sizing: border-box;
 }
 
 .files {
-  overflow: auto;
+        overflow: auto;
 
-  margin-right: 1rem;
-  margin-left: 1rem;
+        margin-right: 1rem;
+        margin-left: 1rem;
 
-  flex-shrink: 0;
+        flex-shrink: 0;
 
-  flex-wrap: wrap;
+        flex-wrap: wrap;
 
-  width: auto;
+        width: auto;
 
-  flex: auto;
+        flex: auto;
 
-  display: flex;
+        display: flex;
 
-  flex-direction: row;
+        flex-direction: row;
 }
 
 .file-preview {
-  height: 256px;
+        height: 256px;
 
-  width: 256px;
+        width: 256px;
 
-  object-fit: scale-down;
+        object-fit: scale-down;
 
-  border-width: 1px;
+        border-width: 1px;
 
-  border-color: black;
+        border-color: black;
 
-  padding: 3px;
+        padding: 3px;
 }
 
 .tools {
-  background-color: lightblue;
+        background-color: lightblue;
 
-  padding: 1rem;
+        padding: 1rem;
 
-  width: 17rem;
+        width: 17rem;
 
-  display: flex;
+        display: flex;
 
-  flex-direction: column;
+        flex-direction: column;
 }
 
 .tooltoggle {
-  display: none;
+        display: none;
 }
 
 .tool-form {
-  display: flex;
+        display: flex;
 
-  flex-direction: column;
+        flex-direction: column;
 }
 
 .toolset {
-  display: flex;
+        display: flex;
 
-  flex-direction: column;
+        flex-direction: column;
 }
 
 .togglebar {
-  background-color: lightgray;
-  width: 100%;
-  height: 8vh;
+        background-color: lightgray;
+        width: 100%;
+        height: 8vh;
 }
 
 .previous {
-  width: auto;
-  height: 8vh;
+        width: auto;
+        height: 8vh;
 }
 
 @media only screen and (max-width: 600px) {
-  .files {
-    flex-direction: row;
+        .files {
+                flex-direction: row;
 
-    width: 100vw;
+                width: 100vw;
 
-    overflow: -moz-scrollbars-none;
+                overflow: -moz-scrollbars-none;
 
-    -ms-overflow-style: none;
-  }
+                -ms-overflow-style: none;
+        }
 
-  .files::-webkit-scrollbar {
-    width: 0 !important;
-  }
+        .files::-webkit-scrollbar {
+                width: 0 !important;
+        }
 
-  .togglebar {
-    display: flex;
+        .togglebar {
+                display: flex;
 
-    flex-direction: row;
+                flex-direction: row;
 
-    width: 100vw;
+                width: 100vw;
 
-    height: 10vh;
+                height: 10vh;
 
-    margin: 0;
-  }
+                margin: 0;
+        }
 
-  .tooltoggle {
-    background-color: white;
+        .tooltoggle {
+                background-color: white;
 
-    border-style: none;
+                border-style: none;
 
-    display: block;
+                display: block;
 
-    flex: auto;
+                flex: auto;
 
-    width: auto;
+                width: auto;
 
-    height: 10vh;
-  }
+                height: 10vh;
+        }
 
-  .toolset {
-    display: none;
+        .toolset {
+                display: none;
 
-    background-color: lightgray;
+                background-color: lightgray;
 
-    height: 90vh;
+                height: 90vh;
 
-    width: 100vw;
+                width: 100vw;
 
-    padding: 12px;
-  }
+                padding: 12px;
+        }
 
-  .file {
-    width: 90%;
-    height: unset;
-  }
+        .file {
+                width: 100%;
+                height: unset;
+        }
 
-  .file-preview {
-    height: unset;
-    width: 100%;
-  }
+        .file-preview {
+                height: unset;
+                width: 100%;
+        }
 
-  .tools {
-    background-color: transparent;
+        .tools {
+                background-color: transparent;
 
-    position: absolute;
+                position: absolute;
 
-    left: 0;
+                left: 0;
 
-    top: 10vh;
-    padding: 0;
-  }
+                top: 10vh;
+                padding: 0;
+        }
 
-  .content {
-    height: 90vh;
-    flex-direction: row;
-  }
-  .previous {
-    height: 10vh;
-    width: 10vh;
-  }
-  * {
-    font-size: 18px;
-  }
+        .content {
+                height: 90vh;
+                flex-direction: row;
+        }
+
+        .previous {
+                height: 10vh;
+                width: 10vh;
+        }
+
+        * {
+                font-size: 18px;
+        }
 }
