--- a/public/mustache/storagemanager.mustache
+++ b/public/mustache/storagemanager.mustache
@@ -2,56 +2,112 @@
  <html>
 
  <head>
-     <link rel="stylesheet" type="text/css" href="/storageManager.css">
-     <meta name="viewport" content="width=device-width" />
+         <link rel="stylesheet" type="text/css" href="/storageManager.css">
+         <meta name="viewport" content="width=device-width" />
  </head>
 
  <body>
 
-  <div class="togglebar" id="togglebar">
-         <div class="previous" onclick="window.location.href='{{previous}}'"><img class="previous" src="/images/previous.png"></div>
-         <button id="tooltoggle" class="tooltoggle">Toggle</button>
-        </div>
-     <div class="content">
-    
-         <div class="files">{{{files}}}</div>
-         <div class="tools" id="tools">
-         <div id="toolset" class="toolset">
-         <p>Upload</p>
-             <form class="tool-form" id="upload-form" enctype="multipart/form-data" method="post"
-                 action="/upload{{path}}">
-                 <input class="button" id="fileupload" name="myfile" type="file" />
-             </form>
-
-               <input class="search" id="search" type="text" placeholder="Search..">
-
-               <p>Create Folder</p>
-               <form class="tool-form" id="upload-form" enctype="multipart/form-data" method="post"
-                 action="/upload{{path}}">
-                 <input class="button" id="create-folder" name="folder" type="text" placeholder="Folder Name" />
-             </form>
+         <div class="togglebar" id="togglebar">
+                 <div class="previous" onclick="window.location.href='{{previous}}'"><img class="previous"
+                                 src="/images/previous.png"></div>
+                 <button id="tooltoggle" class="tooltoggle">Toggle</button>
          </div>
-     </div>
+         <div class="content">
+
+                 <div class="files">{{{files}}}</div>
+                 <div class="tools" id="tools">
+                         <div id="toolset" class="toolset">
+                                 <p>Upload</p>
+                                 <form class="tool-form" id="upload-form" enctype="multipart/form-data" method="post"
+                                         action="/upload{{path}}">
+                                         <input class="button" id="fileupload" name="myfile" type="file" />
+                                 </form>
+
+                                 <input class="search" id="search" type="text" placeholder="Search..">
+
+                                 <p>Create Folder</p>
+                                 <form class="tool-form" id="upload-form" enctype="multipart/form-data" method="post"
+                                         action="/upload{{path}}">
+                                         <input class="button" id="create-folder" name="folder" type="text"
+                                                 placeholder="Folder Name" />
+                                 </form>
+
+                                 <p>
+                                         <p>File Options:</p>
+                                         <button onclick="preview()">Preview</button>
+                                         <button onclick="edit()">Edit</button>
+                                         <button onclick="download()">Download</button>
+                         </div>
+                 </div>
  </body>
  <script>
- document.getElementById("tooltoggle").onclick = function(){
-let toolset =  document.getElementById("toolset");
-if(toolset.style.display === "flex"){
-    toolset.style.display = "none";
- 
-} else {
-    toolset.style.display = "flex";
-}
-console.log(toolset);
-}
-     document.getElementById("fileupload").onchange = function () {
-         document.getElementById("upload-form").submit();
-     };
-     document.getElementById("search").onchange = function () {
-         console.log("Searching");
-     };
+         function preview() {
+                 let selected = document.getElementsByClassName("selected");
+                 for (i in selected) {
+                         if (selected[i].classList) {
+                                 let path = window.location.pathname;
+                                 path = path.split("/download")[path.split.length - 1];
+                                 window.location.href = "/preview-page" + path + "/" + selected[i].id;
+                         }
+                 }
+         }
 
-     
+         function edit() {
+                 let selected = document.getElementsByClassName("selected");
+                 for (i in selected) {
+                         if (selected[i].classList) {
+                                 let path = window.location.pathname;
+                                 path = path.split("/download");
+                                 path = path[path.length - 1];
+                                 if (path === "/"){
+                                         path = "";
+                                 }
+                                 window.location.href = "/editor" + path + "/" + selected[i].id;
+                         }
+                 }
+         }
+
+         function download() {
+                 let selected = document.getElementsByClassName("selected");
+                 for (i in selected) {
+                         if (selected[i].classList) {
+                                 let path = window.location.pathname;
+                                 path = path.split("/download")[path.split.length - 1];
+                                 window.location.href = "/download" + path + "/" + selected[i].id;
+                         }
+                 }
+         }
+
+         function select(id, path) {
+                 let selected = document.getElementsByClassName("selected");
+                 for (i in selected) {
+                         if (selected[i].classList) {
+                                 selected[i].classList.remove("selected");
+                         }
+                 }
+                 if (!document.getElementById(id).classList.contains("selected")) {
+                         document.getElementById(id).classList = "selected " + document.getElementById(id).classList;
+                 }
+
+         }
+
+         document.getElementById("tooltoggle").onclick = function () {
+                 let toolset = document.getElementById("toolset");
+                 if (toolset.style.display === "flex") {
+                         toolset.style.display = "none";
+
+                 } else {
+                         toolset.style.display = "flex";
+                 }
+                 console.log(toolset);
+         }
+         document.getElementById("fileupload").onchange = function () {
+                 document.getElementById("upload-form").submit();
+         };
+         document.getElementById("search").onchange = function () {
+                 console.log("Searching");
+         };
  </script>
  <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@12.4.0/dist/lazyload.min.js"></script>
  <script>
