--- a/public/mustache/editor.mustache
+++ b/public/mustache/editor.mustache
@@ -7,7 +7,7 @@
  </head>
 
  <body>
- <p>Hello World</p>
+ <p>Hello World haha</p>
  <div class="content" id="content">{{{editor}}}</div>
  </body>
 
