added some name, and css adjustments

--- a/public/mustache/storagemanager.mustache
+++ b/public/mustache/storagemanager.mustache
@@ -109,8 +109,8 @@
                  console.log("Searching");
          };
  </script>
- <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@12.4.0/dist/lazyload.min.js"></script>
- <script>
+<script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@12.4.0/dist/lazyload.min.js"></script> <script>
+
          (function () {
                  function logElementEvent(eventName, element) {
                          console.log(
@@ -124,29 +124,28 @@
                          logElementEvent("🔑 ENTERED", element);
                  };
                  var callback_exit = function (element) {
-                         element.style.visibility = "hidden";
                          logElementEvent("🚪 EXITED", element);
                  };
                  var callback_reveal = function (element) {
                          logElementEvent("👁️ REVEALED", element);
                  };
                  var callback_loaded = function (element) {
+                        element.style['visibility'] = "visible";
 
                          logElementEvent("👍 LOADED", element);
                  };
                  var callback_error = function (element) {
+
                          logElementEvent("💀 ERROR", element);
                          element.src =
                                  "https://via.placeholder.com/440x560/?text=Error+Placeholder";
                  };
                  var callback_finish = function () {
-                        element.style.visibility = "none";
-
                          logElementEvent("✔️ FINISHED", document.documentElement);
                  };
 
                  var ll = new LazyLoad({
-                         elements_selector: ".lazy",
+                         elements_selector: "img[data-src]",
                          // Assign the callbacks defined above
                          callback_enter: callback_enter,
                          callback_exit: callback_exit,
@@ -254,6 +253,9 @@ body {
         border-color: black;
 
         padding: 3px;
+
+                visibility: hidden;
+
 }
 
 .tools {
