Added Logout function to website

--- a/public/mustache/storagemanager.mustache
+++ b/public/mustache/storagemanager.mustache
@@ -17,6 +17,8 @@
                  <div class="files">{{{files}}}</div>
                  <div class="tools" id="tools">
                          <div id="toolset" class="toolset">
+                                <button onclick="window.location.href='/logout'">Logout</button>
+
                                  <p>Upload</p>
                                  <form class="tool-form" id="upload-form" enctype="multipart/form-data" method="post"
                                          action="/upload{{path}}">
