Added video support in preview

--- a/public/mustache/preview.mustache
+++ b/public/mustache/preview.mustache
@@ -7,10 +7,11 @@
  </head>
 
  <body>
- <div id="content"></div>
+ <div id="content">{{{preview}}}</div>
  </body>
 
  </html>
+ <!--
  <script>
 let file = '{{{filepath}}}';
  let extension = file.split(".")[file.split(".").length-1];
@@ -35,4 +36,4 @@ let filetypes = {
  } else {
         content.innerHTML += "Not Yet Supported";
  }
- </script>
+ </script>-->
