--- a/public/mustache/storagemanager.mustache
+++ b/public/mustache/storagemanager.mustache
@@ -2,7 +2,8 @@
  <html>
 
  <head>
-         <meta name="viewport" content="width=device-width" />
+        <meta name="viewport" content="width=device-width" />
+        <link href="/css/storageManager.css" rel="stylesheet" />
  </head>
 
  <body>
