--- a/public/css/storageManager.css
+++ b/public/css/storageManager.css
@@ -96,15 +96,26 @@ body {
 }
 
 .tools {
-    background-color: lightblue;
+    border-color: darkgray;
+    border-left-style: solid;
+    border-width: 1px;
 
-    padding: 1rem;
+    padding: 0;
 
     width: 17rem;
 
     display: flex;
 
     flex-direction: column;
+    
+}
+
+.tools .section {
+    font-size: 12px;
+    border-bottom-style: solid;
+    border-bottom-color: darkgray;
+    border-width: 1px;
+    padding: 1rem;
 }
 
 .tooltoggle {
@@ -117,21 +128,21 @@ body {
     flex-direction: column;
 }
 
-.toolset {
-    display: flex;
-
-    flex-direction: column;
-}
-
 .togglebar {
     background-color: lightgray;
     width: 100%;
-    height: 8vh;
+    display: flex;
+    flex-direction: row;
+}
+
+.togglebar button {
+    margin: 10px;
 }
 
 .previous {
-    width: auto;
-    height: 8vh;
+    width: 64px;
+    height: 64px;
+    margin-right: auto;
 }
 
 @media only screen and (max-width: 600px) {
