--- a/public/mustache/editor.mustache
+++ b/public/mustache/editor.mustache
@@ -2,7 +2,7 @@
  <html>
 
  <head>
-     <link rel="stylesheet" type="text/css" href="/editor.css">
+     <link rel="stylesheet" type="text/css" href="/css/editor.css">
      <meta name="viewport" content="width=device-width" />
  </head>
 
