--- a/public/mustache/preview.mustache
+++ b/public/mustache/preview.mustache
@@ -1,16 +1,16 @@
- <!doctype html>
- <html>
+<!doctype html>
+<html>
 
- <head>
-     <link rel="stylesheet" type="text/css" href="/storageManager.css">
-     <meta name="viewport" content="width=device-width" />
- </head>
+<head>
+    <link rel="stylesheet" type="text/css" href="/css/storageManager.css">
+    <meta name="viewport" content="width=device-width" />
+</head>
 
- <body>
- <div id="content">{{{preview}}}</div>
- </body>
+<body>
+    <div id="content">{{{preview}}}</div>
+</body>
 
- </html>
+</html>
  <!--
  <script>
 let file = '{{{filepath}}}';
