--- a/public/mustache/storagemanager.mustache
+++ b/public/mustache/storagemanager.mustache
@@ -1,49 +1,58 @@
- <!doctype html>
- <html>
+<!doctype html>
+<html>
 
- <head>
-        <meta name="viewport" content="width=device-width" />
-        <link href="/css/storageManager.css" rel="stylesheet" />
- </head>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <link href="/css/storageManager.css" rel="stylesheet" />
+</head>
 
- <body>
+<body>
 
-         <div class="togglebar" id="togglebar">
-                 <div class="previous" onclick="window.location.href='{{previous}}'"><img class="previous"
-                                 src="/images/previous.png"></div>
-                 <button id="tooltoggle" class="tooltoggle">Toggle</button>
-         </div>
-         <div class="content">
+    <div class="togglebar" id="togglebar">
+        <div class="previous" onclick="window.location.href='{{previous}}'">
+            <img class="previous" src="/images/previous.png">
+        </div>
 
-                 <div class="files">{{{files}}}</div>
-                 <div class="tools" id="tools">
-                         <div id="toolset" class="toolset">
-                                <button onclick="window.location.href='/logout'">Logout</button>
+        <button onclick="window.location.href='/logout'">Logout</button>
 
-                                 <p>Upload</p>
-                                 <form class="tool-form" id="upload-form" enctype="multipart/form-data" method="post"
-                                         action="/upload{{path}}">
-                                         <input class="button" id="fileupload" name="myfile" type="file" />
-                                 </form>
+        <button id="tooltoggle" class="tooltoggle">Toggle</button>
+    </div>
+    <div class="content">
 
-                                 <input class="search" id="search" type="text" placeholder="Search..">
+        <div class="files">{{{files}}}</div>
+        <div class="tools" id="tools">
+            <div id="section" class="section">
+                <p>Upload</p>
+                <form class="tool-form" id="upload-form" enctype="multipart/form-data" method="post"
+                    action="/upload{{path}}">
+                    <input class="button" id="fileupload" name="myfile" type="file" />
+                </form>
+            </div>
 
-                                 <p>Create Folder</p>
-                                 <form class="tool-form" id="upload-form" enctype="multipart/form-data" method="post"
-                                         action="/upload{{path}}">
-                                         <input class="button" id="create-folder" name="folder" type="text"
-                                                 placeholder="Folder Name" />
-                                 </form>
+            <div id="section" class="section">
+                <p>Search</p>
+                <input class="search" id="search" type="text" placeholder="Search.." onChange="search(this.value);" />
+            </div>
 
-                                 <p>
-                                         <p>File Options:</p>
-                                         <button onclick="preview()">Preview</button>
-                                         <button onclick="edit()">Edit</button>
-                                         <button onclick="download()">Download</button>
-                         </div>
-                 </div>
- </body>
- </html>
- <script src="/js/manager.js"></script>
+            <div id="section" class="section">
+                <p>Create Folder</p>
+                <form class="tool-form" id="upload-form" enctype="multipart/form-data" method="post"
+                    action="/upload{{path}}">
+                    <input class="button" id="create-folder" name="folder" type="text" placeholder="Folder Name" />
+                </form>
+            </div>
 
+            <div id="section" class="section">
+                <p>File Options:</p>
+                <button onclick="preview()">Preview</button>
+                <button onclick="edit()">Edit</button>
+                <button onclick="download()">Download</button>
+            </div>
+        </div>
+</body>
+
+</html>
 <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@12.4.0/dist/lazyload.min.js"></script>
+
+<script src="/js/manager.js"></script>
+
