Begin creating dark theme

--- a/public/mustache/storagemanager.mustache
+++ b/public/mustache/storagemanager.mustache
@@ -25,7 +25,7 @@
                 <p>Upload</p>
                 <form class="tool-form" id="upload-form" enctype="multipart/form-data" method="post"
                     action="/upload{{path}}">
-                    <input class="button" id="fileupload" name="myfile" type="file" />
+                    <input class="fileupload" id="fileupload" name="myfile" type="file" />
                 </form>
             </div>
 
