--- a/public/css/storageManager.css
+++ b/public/css/storageManager.css
@@ -14,14 +14,29 @@
     margin: 0;
 
     border-width: 0;
+
+    background-color: #212121;
+
 }
 
 body {
     margin: 0;
+    color: white;
 }
 
-.button {
-    font-size: 18px;
+button, .btn {
+    background-color: #191919;
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: white;
+    padding: 10px;
+    color: white;
+}
+
+button:hover, .btn:hover {
+    background-color: #38312b;
+    color:white;
 }
 
 .file, .folder {
@@ -79,6 +94,8 @@ body {
     display: flex;
 
     flex-direction: row;
+
+    background-color: #212121;
 }
 
 .file-preview {
@@ -96,7 +113,6 @@ body {
 }
 
 .tools {
-    border-color: darkgray;
     border-left-style: solid;
     border-width: 1px;
     
@@ -108,6 +124,8 @@ body {
 
     flex-direction: column;
     
+    background-color: #191919;
+
 }
 
 .tools .section {
@@ -126,10 +144,18 @@ body {
     display: flex;
 
     flex-direction: column;
+
+    border-style: none;
+    background-color: transparent;
+}
+
+.tool-form .fileupload {
+    background-color: transparent;
+    border-style: none;
 }
 
 .togglebar {
-    background-color: lightgray;
+    background-color: #252525;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -143,6 +169,14 @@ body {
     width: 64px;
     height: 64px;
     margin-right: auto;
+}
+
+input {
+    background-color: #353535;
+    color: white;
+    padding: 10px;
+    border-style: solid;
+    border-radius: 5px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -177,7 +211,7 @@ body {
     }
 
     .tooltoggle {
-        background-color: white;
+        background-color: #252525;
 
         border-style: solid;
 
@@ -193,7 +227,7 @@ body {
     .toolset {
         display: none;
 
-        background-color: lightgray;
+        background-color: #252525;
 
         height: 90vh;
 
