Added file delete functionality

--- a/public/mustache/storagemanager.mustache
+++ b/public/mustache/storagemanager.mustache
@@ -47,6 +47,7 @@
                 <button onclick="preview()">Preview</button>
                 <button onclick="edit()">Edit</button>
                 <button onclick="download()">Download</button>
+                <button onclick="deleteFile()">Delete</button>
             </div>
         </div>
 </body>
