--- a/public/css/public.css
+++ b/public/css/public.css
@@ -4,18 +4,44 @@ body {
     margin: 0;
     background-color:#121212;
     color: white;
+    font-family:arial;
 }
 
-.logo {
+.display {
     margin-top: 10vh;
     margin-bottom: 10vh;
     margin-left: auto;
     margin-right: auto;
+
+    font-size: 28px;
 }
 
-.logo img {
+.display img {
     max-width: 25vw;
     max-height: 25vh
+}
+
+.display .title {
+    background-color: #030303;
+    padding: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    padding-right: 5vw;
+    padding-left: 5vw;
+}
+
+.display .info {
+    text-align: center;
+    background-color: #252525;
+    padding: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
 }
 
 .form {
