--- a/public/mustache/index.mustache
+++ b/public/mustache/index.mustache
@@ -23,7 +23,12 @@
 
     <div class="display" id="files-stored">
         <div class="title" id="title">Files Stored</div>
-        <div id="counter" class="info">0</div>
+            </div>
+        </div>
+        <div class="display" id="example">
+            <div class="browser-border">
+                <img style="max-height: 40vh; max-width: 40vw;" src="/images/example-desktop.webp">
+            </div>
     </div>
     </div>
 </body>
