Added titles to all pages

--- a/public/mustache/editor.mustache
+++ b/public/mustache/editor.mustache
@@ -4,6 +4,7 @@
  <head>
      <link rel="stylesheet" type="text/css" href="/css/editor.css">
      <meta name="viewport" content="width=device-width" />
+    <title>Editor</title>
  </head>
 
  <body>
