--- a/public/mustache/index.mustache
+++ b/public/mustache/index.mustache
@@ -4,6 +4,7 @@
  <head>
     <link rel="StyleSheet" href="/css/public.css" type="text/css" />
         <meta name="viewport" content="width=device-width" />
+<title>Example Title</title>
  </head>
 
  <body>
