--- a/public/mustache/preview.mustache
+++ b/public/mustache/preview.mustache
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="/css/storageManager.css">
     <meta name="viewport" content="width=device-width" />
+    <title>Preview</title>
 </head>
 
 <body>
