--- a/public/mustache/storagemanager.mustache
+++ b/public/mustache/storagemanager.mustache
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <link href="/css/storageManager.css" rel="stylesheet" />
+    <title>Storage Manager</title>
 </head>
 
 <body>
