--- a/public/mustache/index.mustache
+++ b/public/mustache/index.mustache
@@ -18,6 +18,7 @@
         </div>
     </div>
     <div class="content">
+        <div class="display">
     <div class="display" id="logo">
         <img src="/images/logo.webp">
     </div>
